--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -76,6 +76,32 @@
 </section>
 
 <a href="/venues/{{ venue.id }}/edit"><button class="btn btn-primary btn-lg">Edit</button></a>
+<button
+	id="delete-venue"
+	data-id="{{ venue.id }}"
+	class="btn btn-primary btn-lg"
+>
+	Delete
+</button>
+
+
+<script>
+  const deleteBtn = document.getElementById('delete-venue')
+  deleteBtn.onclick = function(e) {
+    const venueId = e.target.dataset['id']
+		console.log('about to delete')
+    fetch('/venues/' + venueId, {
+      method: 'DELETE'
+    }).then(response => {
+        // HTTP 301 response
+        
+        if (response.redirected) {
+					console.log('redirected')
+            window.location.href = response.url;
+        }
+    })
+  }
+</script>
 
 {% endblock %}
 
